--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:${_reactNativeVersion}"
     implementation "com.android.support:support-v4:${safeExtGet("supportLibVersion", "27.1.1")}"
+    implementation "com.zlc.glide:webpdecoder:1.5.${_glideVersion}"
     implementation("com.github.bumptech.glide:glide:${_glideVersion}") {
         exclude group: "com.android.support", module: "glide"
     }
