--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,6 +54,11 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:${_reactNativeVersion}"
     implementation "com.android.support:support-v4:${safeExtGet("supportLibVersion", "27.1.1")}"
+    // webpdecoder
+    implementation "com.zlc.glide:webpdecoder:1.5.${_glideVersion}"
+    // glide 4.6.1~4.9.0 (exclude broken version 4.6.0, 4.7.0)
+    implementation "com.github.bumptech.glide:glide:${_glideVersion}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${_glideVersion}"
     implementation("com.github.bumptech.glide:glide:${_glideVersion}") {
         exclude group: "com.android.support", module: "glide"
     }
